force-app/main/default/objects/ReceivablesAmount__c/ReceivablesAmount__c.object-meta.xml
<CustomObject>
    <label>Receivables Amount</label>
    <nameField>
        <displayFormat>RA-{000000}</displayFormat>
        <label>Receivables Amount ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receivables Amount</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>