force-app/main/default/objects/ReceivablesAmount__c/fields/AmountReceived__c.field-meta.xml
<CustomField>
    <fullName>AmountReceived__c</fullName>
    <label>Amount Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>