force-app/main/default/objects/ReceivablesAmount__c/fields/GoodSO__c.field-meta.xml
<CustomField>
    <fullName>GoodSO__c</fullName>
    <label>Good S/O</label>
    <referenceTo>SALES_ORDER__c</referenceTo>
    <relationshipLabel>Receivables Amount</relationshipLabel>
    <relationshipName>Receivables_Amount</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>