force-app/main/default/objects/ReceivablesAmount__c/fields/Received_Type__c.field-meta.xml
<CustomField>
    <fullName>Received_Type__c</fullName>
    <label>Received Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>